Cambio en agregar tarea

--- a/lib/tareas.jade
+++ b/lib/tareas.jade
@@ -86,7 +86,7 @@ section(ng-init="getTareas()")
     //-Card-Editing-End
   //-Card-End
   //-Card-New
-  form(ng-submit="addTarea(newTarea); addNewTarea = false;" ng-show="addNewTarea").task.add-mode
+  form(ng-submit="addTarea(newTarea);" ng-show="addNewTarea").task.add-mode
       div.titleSection 
         strong Nueva Tarea
 
