--- a/public/templates/tareas.html
+++ b/public/templates/tareas.html
@@ -76,7 +76,7 @@
       </div>
     </form>
   </ul>
-  <form ng-submit="addTarea(newTarea); addNewTarea = false;" ng-show="addNewTarea" class="task add-mode">
+  <form ng-submit="addTarea(newTarea);" ng-show="addNewTarea" class="task add-mode">
     <div class="titleSection"> <strong>Nueva Tarea</strong></div>
     <div class="task-info edit-mode">
       <h3><span><strong>Nombre:</strong></span>
